---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
snapshot_kind: text
---
OB051 [*] `pause` statements are a deleted feature
 --> ./resources/test/fixtures/obsolescent/OB051.f90:4:3
  |
2 |   implicit none
3 |   print*,"hello"
4 |   pause
  |   ^^^^^
5 |   print*,"bye"
6 | end program
  |
help: Use 'read(*, *)' instead
1 | program test
2 |   implicit none
3 |   print*,"hello"
  -   pause
4 +   read(*, *)
5 |   print*,"bye"
6 | end program
note: This is an unsafe fix and may change runtime behavior
